# entropit

./: .gitignore  ENTROPIT_ARCHITECTURE.md  ENTROPIT_PROJECT_STRUCTURE.md  GETTING_STARTED.md  LICENSE  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.md  README.md  START_HERE.md  benchmark.py  entropit.py  entropit_quickstart.py  entropit_requirements.txt  entropit_ui.py  gen_extropic.py  gen_traditional.py  pyproject.toml  requirements.txt  setup.py  traditional_generators.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PROJECT_ORGANIZATION.md  SCALING.md  TODO.md
entropit/: __init__.py  core.py  ui.py
examples/: benchmark_demo.py  comparison_demo.py  interactive_ui.py  quickstart.py
src/entropit/: __init__.py  analysis.py  core.py  traditional.py  ui.py
