[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "entropit"
version = "0.1.0"
description = "Probabilistic dungeon generation powered by thermodynamic computing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "EntroPit Team", email = "your.email@example.com"}
]
keywords = ["procedural generation", "dungeons", "thrml", "thermodynamic computing", "extropic", "ising model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "thrml>=0.1.3",
    "equinox>=0.11.2",
    "jaxtyping>=0.2.23",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "gradio>=4.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/entropit"
Documentation = "https://github.com/yourusername/entropit/blob/main/docs/"
Repository = "https://github.com/yourusername/entropit"
"Bug Tracker" = "https://github.com/yourusername/entropit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

